# ViterbiApp

./: CMakeLists.txt  README.md  script.py
include/: BscChannel.h  ConvolutionalCode.h  SymbolCodec.h  ViterbiDecoder.h
src/: BscChannel.cpp  ConvolutionalCode.cpp  SymbolCodec.cpp  ViterbiDecoder.cpp  main.cpp
